<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.unice.polytech.isa</groupId>
    <artifactId>tcf-backend</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>ISA :: The Cookie Factory :: J2E Backend</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <versions.tomee.embedded>1.7.3</versions.tomee.embedded>
    </properties>

    <profiles>
        <profile>
            <!-- Use 'mvn -P stable' to activate stable dependencies (by default) -->
            <id>stable</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <versions.javaee>6.0-6</versions.javaee>
                <versions.openejb>4.7.3</versions.openejb>
                <versions.tomee>1.7.3</versions.tomee>
            </properties>
        </profile>
        <profile>
            <!-- Use 'mvn -P latest' to activate these dependencies -->
            <id>latest</id>
            <properties>
                <versions.javaee>7.0-SNAPSHOT</versions.javaee>
                <versions.openejb>5.0.0-SNAPSHOT</versions.openejb>
                <versions.tomee>2.0.0-SNAPSHOT</versions.tomee>
            </properties>
        </profile>

    </profiles>


    <pluginRepositories>
        <!-- Snapshot repository to access to the latest version of the OpenEJB framework -->
        <pluginRepository>
            <id>apache-m2-snapshot</id>
            <name>Apache Snapshot Repository</name>
            <url>https://repository.apache.org/content/groups/snapshots</url>
        </pluginRepository>
        <pluginRepository>
        <id>snapshots</id>
        <url>http://erebe-vm6.i3s.unice.fr/artifactory/libs-snapshot</url>
        <releases>
            <enabled>false</enabled>
        </releases>
    </pluginRepository>

    </pluginRepositories>
    <dependencyManagement>
        <dependencies>
            <!-- Dependencies for the OpenEJB framework -->
            <dependency>
                <groupId>org.apache.openejb</groupId>
                <artifactId>javaee-api</artifactId>
                <version>${versions.javaee}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.openejb</groupId>
                <artifactId>openejb-core</artifactId>
                <version>${versions.openejb}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.openejb</groupId>
                <artifactId>tomee-embedded</artifactId>
                <version>${versions.tomee}</version>
                <scope>test</scope>
            </dependency>
            <!-- Dependency to integrate REST clients (order matters for CXF) -->
            <dependency>
                <groupId>org.apache.openejb</groupId>
                <artifactId>openejb-cxf</artifactId>
                <version>${versions.openejb}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.openejb</groupId>
                <artifactId>openejb-cxf-rs</artifactId>
                <version>${versions.openejb}</version>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>20160212</version>
            </dependency>
            <!-- Dependencies for the testing frameworks (Junit, Mockito & Arquillian) -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>1.10.19</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.arquillian.junit</groupId>
                <artifactId>arquillian-junit-container</artifactId>
                <version>1.1.5.Final</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.shrinkwrap.resolver</groupId>
                <artifactId>shrinkwrap-resolver-depchain</artifactId>
                <version>2.1.1</version>
                <type>pom</type>
                <scope>test</scope>
            </dependency>
            <!-- Application server: Tomee -->
            <dependency>
                <groupId>org.apache.openejb</groupId>
                <artifactId>arquillian-tomee-embedded</artifactId>
                <version>${versions.tomee.embedded}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>tcf-service-impl</artifactId>
                <version>${project.version}</version>
                <type>war</type>
                <scope>runtime</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <distributionManagement>
        <snapshotRepository>
            <id>snapshots</id>
            <name>erebe-vm6-snapshots</name>
            <url>http://erebe-vm6.i3s.unice.fr/artifactory/libs-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>
    <modules>
        <module>business</module>
        <module>kitchen</module>
        <module>customer</module>
        <module>order</module>
        <module>webservicesmodule</module>
    </modules>

    <build>
        <finalName>tcf-backend</finalName>
        <defaultGoal>package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <!-- otherwise openejb embedded and tomee embedded shares the same context and EJBContainer is broken -->
                    <reuseForks>false</reuseForks>
                    <excludes>
                        <exclude>**/*IntegrationTest.java</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>integration-test</phase>
                        <configuration>
                            <excludes>
                                <exclude>none</exclude>
                            </excludes>
                            <includes>
                                <include>**/*IntegrationTest.java</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.openejb.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
                <version>${versions.tomee.embedded}</version>
                <configuration>

                    <!-- Avoid errors for duplicated deployment ids -->
                    <systemVariables>
                        <openejb.deploymentId.format>{moduleId}/{ejbName}</openejb.deploymentId.format>
                    </systemVariables>
                    <!-- From TomEE to TomEE+ to support the web services stack -->
                    <tomeeClassifier>plus</tomeeClassifier>
                    <args>-Xmx512m -XX:PermSize=256m</args>
                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
                   <!-- <libs>
                        <lib>fr.unice.polytech.isa:business:1.0-SNAPSHOT</lib>
                        <lib>fr.unice.polytech.isa:customer:1.0-SNAPSHOT</lib>
                        <lib>fr.unice.polytech.isa:kitchen:1.0-SNAPSHOT</lib>
                        <lib>fr.unice.polytech.isa:order:1.0-SNAPSHOT</lib>
                    </libs>-->

                    <webapps>
                        <webapp>fr.unice.polytech.isa:webservicesmodule:1.0-SNAPSHOT</webapp>
                    </webapps>


                </configuration>
            </plugin>
            <!--<plugin>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <dependentWarExcludes>WEB-INF/web.xml,**/**.class</dependentWarExcludes>
                    <webResources>
                        <resource>
                            <directory>src/main/webapp/WEB-INF</directory>
                            <filtering>true</filtering>
                            <targetPath>WEB-INF</targetPath>
                        </resource>
                    </webResources>
                </configuration>
            </plugin>-->
        </plugins>
    </build>
</project>
